# mycrypt

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yaml
scripts/: package
src/: lib.rs  main.rs
