[package]
name = "mycrypt"
version = "0.1.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Encrypt/decrypt your file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
dialoguer = "0.9.0"
sha2 = "0.9.8"
typenum = "1.14.0"

[profile.release]
lto = true